GS-14490 add exports and opens required by java 17 to default